--- a/documentation/thesis/thesis_document.tex
+++ b/documentation/thesis/thesis_document.tex
@@ -3660,17 +3660,16 @@ determine various sensor characteristics, including background noise,
 temperature coefficients and linearity.
 
 The evaluation of the measurement data showed that the selected sensors
-only partially fulfil the defined requirements.
-
-The \emph{TLV493D} and \emph{MMC5603NJ} sensors are both suitable for
-characterising permanent magnets and enable linearity compensation with
-a defined measurement setup. Although the \emph{MMC5603NJ} has a limited
-measuring range, it can still be used for relative comparisons of
-permanent magnets without additional devices and without software
-calibration. It also has a minimal long-term background noise. Absolute
-comparability can be achieved by prior software calibration and using
-reference measurements, making it an ideal sensor for the task of
-characterising permanent magnets in field tests.
+only partially fulfil the defined requirements. The \emph{TLV493D} and
+\emph{MMC5603NJ} sensors are both suitable for characterising permanent
+magnets and enable linearity compensation with a defined measurement
+setup. Although the \emph{MMC5603NJ} has a limited measuring range, it
+can still be used for relative comparisons of permanent magnets without
+additional devices and without software calibration. It also has a
+minimal long-term background noise. Absolute comparability can be
+achieved by prior software calibration and using reference measurements,
+making it an ideal sensor for the task of characterising permanent
+magnets in field tests.
 
 The \emph{MMC5603NJ} is not recommended for measuring the homogeneity of
 a \emph{50\(\mu\)T} \emph{B0} field on a Halbach ring basis with an
